# hotswap

./: LICENSE  pyproject.toml  test_predict.py  usage_guide.md
dashboard/: app.js  index.html  style.css
hotswap/: __init__.py  __main__.py
hotswap/api/: __init__.py  app.py  routes.py  schemas.py
hotswap/core/: __init__.py  base_model.py  inference.py  registry.py  shadow.py
hotswap/models/: __init__.py  mnist_cnn.py
hotswap/utils/: __init__.py  config.py  synthetic_data.py  validation.py
hotswap/workers/: __init__.py  swap.py  trainer.py  watcher.py
scripts/: demo.py  generate_bad_data.py  reset.sh  test_workflow.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_e2e_workflow.py
tests/unit/: __init__.py  test_inference_engine.py  test_registry.py  test_shadow_mode.py
